# sedaman

./: .gitignore  CMakeLists.txt  README.md  dox.conf
include/: C_API.hpp  CommonSEGD.hpp  CommonSEGY.hpp  CommonSegd.hpp  CommonSegy.hpp  Exception.hpp  ISEGD.hpp  ISEGY.hpp  ISEGYSorted1D.hpp  ISegd.hpp  ISegy.hpp  OSEGD.hpp  OSEGDRev2_1.hpp  OSEGY.hpp  OSEGYRev0.hpp  OSEGYRev1.hpp  OSEGYRev2.hpp  OSegy.hpp  OSegyRev0.hpp  OSegyRev1.hpp  OSegyRev2.hpp  Trace.hpp  common_segy.hpp  config.hpp  isegy.hpp  segy.hpp  sexception.hpp  trace.hpp  util.hpp
samples/: 1I.sgy  2I.sgy  4I.sgy  ibm.sgy  ieee_single.sgy  trace_headers.conf
src/: C_API.cpp  CommonSEGD.cpp  CommonSEGY.cpp  CommonSegd.cpp  CommonSegy.cpp  Exception.cpp  ISEGD.cpp  ISEGY.cpp  ISEGYSorted1D.cpp  ISegd.cpp  ISegy.cpp  OSEGD.cpp  OSEGDRev2_1.cpp  OSEGY.cpp  OSEGYRev0.cpp  OSEGYRev1.cpp  OSEGYRev2.cpp  OSegy.cpp  OSegyRev0.cpp  OSegyRev1.cpp  OSegyRev2.cpp  Trace.cpp  common_segy.cpp  config.cpp  isegy.cpp  pybind.cpp  segy.cpp  sexception.cpp  trace.cpp
src/pybind/: pybind.cpp
tests/: CMakeLists.txt  ascii_ebcdic_conversion.cpp  bin_bcd_conversion.cpp  check_bin_header.cpp  check_reading_samples_1I.cpp  check_reading_samples_2I.cpp  check_reading_samples_4I.cpp  check_reading_samples_ibm.cpp  check_reading_samples_ieee_single.cpp  count_all_traces.cpp  no_such_file.cpp  print_bin_header.cpp  print_gen_header.cpp  print_text_header.cpp  read_all_headers.cpp  read_and_write.cpp  read_trace_samples.cpp  trace_copy.cpp  trace_move.cpp  verify_writing.cpp
tests/segd/: CMakeLists.txt  print_channel_sets.cpp  print_gen_header.cpp  print_trace_header.cpp  print_trace_samples.cpp  write_and_check.cpp
tests/segy/: CMakeLists.txt  check_bin_header.cpp  check_reading_samples_1I.cpp  check_reading_samples_2I.cpp  check_reading_samples_4I.cpp  check_reading_samples_ibm.cpp  check_reading_samples_ieee_single.cpp  count_all_traces.cpp  no_such_file.cpp  print_bin_header.cpp  print_text_header.cpp  read_all_headers.cpp  verify_writing.cpp
